--- a/POT/POT.csproj
+++ b/POT/POT.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>POT</ProductName>
     <PublisherName>Exception</PublisherName>
-    <ApplicationRevision>45</ApplicationRevision>
+    <ApplicationRevision>47</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -115,6 +115,12 @@
     <Compile Include="MyTypes\PartSifrarnik.cs" />
     <Compile Include="MyTypes\Part.cs" />
     <Compile Include="MyTypes\PovijestLog.cs" />
+    <Compile Include="Otpremnica.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Otpremnica.Designer.cs">
+      <DependentUpon>Otpremnica.cs</DependentUpon>
+    </Compile>
     <Compile Include="PartsList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainCmpSelector.resx">
       <DependentUpon>MainCmpSelector.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Otpremnica.resx">
+      <DependentUpon>Otpremnica.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PartsList.resx">
       <DependentUpon>PartsList.cs</DependentUpon>
