--- a/POT/POT.csproj
+++ b/POT/POT.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>POT</ProductName>
     <PublisherName>Exception</PublisherName>
-    <ApplicationRevision>47</ApplicationRevision>
+    <ApplicationRevision>50</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -133,6 +133,11 @@
     <Compile Include="Primka.Designer.cs">
       <DependentUpon>Primka.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>strings.resx</DependentUpon>
+    </Compile>
     <Compile Include="Selector.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -199,6 +204,11 @@
     <EmbeddedResource Include="Primka.resx">
       <DependentUpon>Primka.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\strings.hr.resx" />
+    <EmbeddedResource Include="Properties\strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Selector.resx">
       <DependentUpon>Selector.cs</DependentUpon>
     </EmbeddedResource>
@@ -255,6 +265,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="EXE.ico" />
+    <None Include="Resources\search_64px.png" />
+    <None Include="Resources\magnifying-glass_64px.png" />
+    <None Include="Resources\gears_64px.png" />
+    <None Include="Resources\documents_64px.png" />
+    <None Include="Resources\doc 12.png" />
+    <None Include="Resources\Backgrounds_Green_wire_among_black_098880_23.jpg" />
+    <None Include="Resources\pebbles_stones_smooth_131318_3840x2160.jpg" />
+    <None Include="Resources\plane_sky_reflection_130728_3840x2160.jpg" />
+    <None Include="Resources\gold_world_map_detail.jpg" />
+    <None Include="Resources\Black %281%29.jpg" />
     <None Include="Resources\POTLogo1.png" />
     <None Include="Resources\POTLogo.png" />
     <None Include="Resources\Logo_Initial.png" />
