--- a/POT/POT.csproj
+++ b/POT/POT.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>POT</ProductName>
     <PublisherName>Exception</PublisherName>
-    <ApplicationRevision>50</ApplicationRevision>
+    <ApplicationRevision>51</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -86,6 +86,7 @@
     <Compile Include="AddRegion.Designer.cs">
       <DependentUpon>AddRegion.cs</DependentUpon>
     </Compile>
+    <Compile Include="BuildingClasses\DBTableMaking.cs" />
     <Compile Include="CompanyInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +99,12 @@
     </Compile>
     <Compile Include="DeleteDBUser.Designer.cs">
       <DependentUpon>DeleteDBUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -184,6 +191,7 @@
       <DependentUpon>State.cs</DependentUpon>
     </Compile>
     <Compile Include="WorkingClasses\CLogo.cs" />
+    <Compile Include="WorkingClasses\CriptMe.cs" />
     <Compile Include="WorkingClasses\PrintMe.cs" />
     <Compile Include="WorkingUser.cs" />
     <EmbeddedResource Include="AddRegion.resx">
@@ -194,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DeleteDBUser.resx">
       <DependentUpon>DeleteDBUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
