--- a/POT/POT.csproj
+++ b/POT/POT.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>POT</ProductName>
     <PublisherName>Exception</PublisherName>
-    <ApplicationRevision>55</ApplicationRevision>
+    <ApplicationRevision>56</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -98,6 +98,18 @@
     </Compile>
     <Compile Include="BuildingClasses\CompanyInfo.Designer.cs">
       <DependentUpon>CompanyInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CopyPrintForms\cOTPcs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CopyPrintForms\cOTPcs.Designer.cs">
+      <DependentUpon>cOTPcs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CopyPrintForms\cPRIM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CopyPrintForms\cPRIM.Designer.cs">
+      <DependentUpon>cPRIM.cs</DependentUpon>
     </Compile>
     <Compile Include="Documents\Tickets.cs">
       <SubType>Form</SubType>
@@ -223,6 +235,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BuildingClasses\DeleteDBUser.resx">
       <DependentUpon>DeleteDBUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CopyPrintForms\cOTPcs.resx">
+      <DependentUpon>cOTPcs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CopyPrintForms\cPRIM.resx">
+      <DependentUpon>cPRIM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Documents\IUS.resx">
       <DependentUpon>IUS.cs</DependentUpon>
