--- a/POT/POT.csproj
+++ b/POT/POT.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>POT</ProductName>
     <PublisherName>Exception</PublisherName>
-    <ApplicationRevision>56</ApplicationRevision>
+    <ApplicationRevision>58</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -118,6 +118,7 @@
       <DependentUpon>Tickets.cs</DependentUpon>
     </Compile>
     <Compile Include="MyTypes\Branch.cs" />
+    <Compile Include="MyTypes\MainCmp.cs" />
     <Compile Include="WorkingClasses\AddTIDDB.cs" />
     <Compile Include="WorkingClasses\ConnectionHelper.cs" />
     <Compile Include="BuildingClasses\DeleteDBUser.cs">
@@ -266,10 +267,13 @@
     <EmbeddedResource Include="Documents\Primka.resx">
       <DependentUpon>Primka.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\strings.hr.resx" />
+    <EmbeddedResource Include="Properties\strings.hr.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>strings.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="WorkingClasses\Selector.resx">
       <DependentUpon>Selector.cs</DependentUpon>
