--- a/POT/Properties/Settings.settings
+++ b/POT/Properties/Settings.settings
@@ -116,5 +116,8 @@
     <Setting Name="ObracunskaJedinica" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">15</Value>
     </Setting>
+    <Setting Name="CmpID" Type="System.Int64" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
