--- a/POT/POT.csproj
+++ b/POT/POT.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>POT</ProductName>
     <PublisherName>Exception</PublisherName>
-    <ApplicationRevision>71</ApplicationRevision>
+    <ApplicationRevision>73</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -129,15 +129,35 @@
     <Compile Include="Documents\ISS.Designer.cs">
       <DependentUpon>ISS.cs</DependentUpon>
     </Compile>
+    <Compile Include="Documents\Racun.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Documents\Racun.Designer.cs">
+      <DependentUpon>Racun.cs</DependentUpon>
+    </Compile>
     <Compile Include="Documents\Tickets.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Documents\Tickets.Designer.cs">
       <DependentUpon>Tickets.cs</DependentUpon>
     </Compile>
+    <Compile Include="Loading.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Loading.Designer.cs">
+      <DependentUpon>Loading.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyTypes\Branch.cs" />
+    <Compile Include="MyTypes\Invoice.cs" />
+    <Compile Include="MyTypes\InvoiceParts.cs" />
     <Compile Include="MyTypes\ISSparts.cs" />
     <Compile Include="MyTypes\MainCmp.cs" />
+    <Compile Include="Saving.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Saving.Designer.cs">
+      <DependentUpon>Saving.cs</DependentUpon>
+    </Compile>
     <Compile Include="WorkingClasses\AddTIDDB.cs" />
     <Compile Include="WorkingClasses\ConnectionHelper.cs" />
     <Compile Include="BuildingClasses\DeleteDBUser.cs">
@@ -275,12 +295,21 @@
     <EmbeddedResource Include="Documents\IUS.resx">
       <DependentUpon>IUS.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Documents\Racun.resx">
+      <DependentUpon>Racun.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Documents\Tickets.resx">
       <DependentUpon>Tickets.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Loading.resx">
+      <DependentUpon>Loading.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Saving.resx">
+      <DependentUpon>Saving.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WorkingClasses\MainCmpSelector.resx">
       <DependentUpon>MainCmpSelector.cs</DependentUpon>
@@ -362,6 +391,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="EXE.ico" />
+    <None Include="Resources\LogIn.gif" />
+    <None Include="Resources\LoadingGif.gif" />
+    <None Include="Resources\Save.gif" />
     <None Include="Resources\Exeption_logoodrezan.jpg" />
     <None Include="Resources\brush 2.png" />
     <None Include="Resources\warehousG1.png" />
