na dokumente dodano snimanje pdf datoteka

--- a/POT/App.config
+++ b/POT/App.config
@@ -169,6 +169,12 @@
             <setting name="odgovornaOsoba" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DefaultFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SaveToPDF" serializeAs="String">
+                <value>False</value>
+            </setting>
         </POT.Properties.Settings>
     </userSettings>
 </configuration>
