--- a/POT/Properties/Settings.settings
+++ b/POT/Properties/Settings.settings
@@ -161,5 +161,11 @@
     <Setting Name="odgovornaOsoba" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DefaultFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SaveToPDF" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
