--- a/POT/POT.csproj
+++ b/POT/POT.csproj
@@ -25,7 +25,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ProductName>POT</ProductName>
     <PublisherName>Exception</PublisherName>
-    <ApplicationRevision>76</ApplicationRevision>
+    <ApplicationRevision>77</ApplicationRevision>
     <ApplicationVersion>1.3.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -216,6 +216,12 @@
     <Compile Include="Documents\Otpremnica.Designer.cs">
       <DependentUpon>Otpremnica.cs</DependentUpon>
     </Compile>
+    <Compile Include="WorkingClasses\PartEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WorkingClasses\PartEditor.Designer.cs">
+      <DependentUpon>PartEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="WorkingClasses\PartsList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -341,6 +347,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Documents\Otpremnica.resx">
       <DependentUpon>Otpremnica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WorkingClasses\PartEditor.resx">
+      <DependentUpon>PartEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WorkingClasses\PartsList.resx">
       <DependentUpon>PartsList.cs</DependentUpon>
