Sitni popravci bugova, racunanje ponude (stavio da se koristi objekt tempSifPart) umjesto textboxa, racuna, login

--- a/POT/Properties/Settings.settings
+++ b/POT/Properties/Settings.settings
@@ -167,5 +167,8 @@
     <Setting Name="SaveToPDF" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="APIweb" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
