--- a/POT/Properties/Settings.settings
+++ b/POT/Properties/Settings.settings
@@ -170,5 +170,8 @@
     <Setting Name="APIweb" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="StornoInvoiceNumber" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
